--- a/Scene3.xaml
+++ b/Scene3.xaml
@@ -18,6 +18,7 @@
             <Setter Property="materialDesign:ShadowAssist.Darken" Value="True"></Setter>
             <Setter Property="materialDesign:ShadowAssist.ShadowDepth" Value="Depth2"></Setter>
             <Setter Property="FontFamily" Value="Sugeoe UI"></Setter>
+            <Setter Property="Tag" Value="{Binding}"></Setter>
             <EventSetter Event="Click" Handler="SeatBtn_Click"></EventSetter>
             <Setter Property="Template">
                 <Setter.Value>
