--- a/Ticket_purchase.xaml
+++ b/Ticket_purchase.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Theater.Ticket_purchase"
+﻿<Window x:Class="Theater.Ticket_purchase1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,30 @@
         xmlns:local="clr-namespace:Theater"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Ticket_purchase" Height="550" Width="800" FontFamily="Century Gothic" FontSize="18" Closing="Window_Closing">
+        Title="Ticket_purchase1" Height="600" Width="800" FontFamily="Century Gothic" Closing="Window_Closing">
+    <Window.Resources>
+        <Style x:Key="Seat" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedLightButton}">
+            <Setter Property="Background" Value="White"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="BorderBrush" Value="Black"></Setter>
+            <Setter Property="Height" Value="20"></Setter>
+            <Setter Property="Width" Value="20"></Setter>
+            <Setter Property="FontFamily" Value="Sugeoe UI"></Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Ellipse Fill="Tomato">
+                            </Ellipse>
+                            <ContentPresenter HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+    </Window.Resources>
     <materialDesign:DialogHost>
         <materialDesign:DialogHost.DialogContentTemplate>
             <DataTemplate DataType="local: TextBlock">
@@ -22,40 +45,37 @@
                 </Grid>
             </DataTemplate>
         </materialDesign:DialogHost.DialogContentTemplate>
-        <Grid>
+        <Grid x:Name="MainGrid">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="475*"/>
-                <ColumnDefinition Width="317*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="170*"/>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="55*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="1" Panel.ZIndex="1" Background="White" Grid.RowSpan="2"></Border>
+            <Slider Grid.Row="1" Panel.ZIndex="1" x:Name="ZoomSlider" Minimum="1" Maximum="5" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <StackPanel Grid.Row="2" Panel.ZIndex="1" HorizontalAlignment="Center">
+                <Label x:Name="InitialPrice" VerticalAlignment="Center" FontSize="15">Цена: 0.00 грн.</Label>
+                <Label x:Name="Discount" VerticalAlignment="Center" FontSize="15">Скидка: 0%</Label>
+                <Label x:Name="OverallPrice" VerticalAlignment="Center" FontSize="17" FontWeight="Black">Всего: 0.00 грн.</Label>
+                <Button IsEnabled="False" x:Name="PurchaseBtn" HorizontalAlignment="Center" FontSize="16" Click="PurchaseBtn_Click">Купить билеты</Button>
+            </StackPanel>
+            <Border Panel.ZIndex="1" Background="White" Grid.Column="1" Grid.RowSpan="3"></Border>
+            <Grid Grid.Column="1" x:Name="InfoGrid"  Panel.ZIndex="1" Grid.RowSpan="3" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="39*"/>
-                    <RowDefinition Height="39*"/>
-                    <RowDefinition Height="322*"/>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="15*"/>
+                    <RowDefinition Height="61*"/>
+                    <RowDefinition Height="15*"/>
                 </Grid.RowDefinitions>
-                <Label HorizontalAlignment="Center" VerticalAlignment="Center" Margin="147,4,147,3" Height="32" Width="161">Выберите место</Label>
-                <CheckBox x:Name="Discount" Grid.Row="1" HorizontalAlignment="Center" FontSize="14" Click="Discount_Click">Есть ли льготы?</CheckBox>
-                <Label x:Name="PriceLabel" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center">Цена: 0 грн.</Label>
-                <Button Grid.Row="4" HorizontalAlignment="Center" FontSize="18" IsEnabled="False" x:Name="PurchaseBtn" Click="PurchaseBtn_Click">Заказать билеты</Button>
-                <Viewbox Grid.Row="2">
-                    <local:Scene x:Name="Scene" FontFamily="Segoe UI"></local:Scene>
-                </Viewbox>
-            </Grid>
-            <Grid Grid.Column="2" Margin="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="24*"/>
-                    <RowDefinition Height="24*"/>
-                    <RowDefinition Height="48*"/>
-                    <RowDefinition Height="211*"/>
-                </Grid.RowDefinitions>
-                <Label x:Name="Date" HorizontalAlignment="Center" VerticalAlignment="Center">Дата: 20.05.2019</Label>
-                <Label x:Name="Beginning" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">Начало: 20:00</Label>
-                <Label Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <TextBlock x:Name="Duration" TextAlignment="Center">Продолжительность:<LineBreak/> 1 час 20 минут</TextBlock>
-                </Label>
-                <Image x:Name="AfishaImg" Grid.Row="3" Source="Resources\pass-afisha.jpg"></Image>
+                <Label x:Name="AfishaLabel" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Black" FontSize="22">Реверс</Label>
+                <Image Margin="10" Panel.ZIndex="1" x:Name="AfishaImg" Grid.Row="1" Source="Resources\pass-afisha.jpg"></Image>
+                <StackPanel Panel.ZIndex="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="2">
+                    <materialDesign:PackIcon  HorizontalAlignment="Center" VerticalAlignment="Center" Kind="DateRange"></materialDesign:PackIcon>
+                    <Label x:Name="AfishaDate" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16">20.05.2019 19:00</Label>
+                </StackPanel>
             </Grid>
         </Grid>
     </materialDesign:DialogHost>
