--- a/Performance.xaml
+++ b/Performance.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Theater"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Performance" Height="900" Width="800" FontFamily="Century Gothic">
+        Title="Представление" Height="900" Width="800" FontFamily="Century Gothic">
     <Window.Resources>
         <Style x:Key="MonthStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedLightButton}">
             <Setter Property="materialDesign:RippleAssist.Feedback" Value="#DD000000"></Setter>
